tests/valid/semantic_ok.snl
program semanticOk
type intArray = array[1..3] of integer;
     rec = record
         integer value;
         char tag;
     end;
var integer x,y;
    char c;
    intArray nums;
    rec item;
procedure adjust(integer input; var integer output);
var integer local;
begin
    local := input + 1;
    output := local;
    return(local)
end
begin
    read(x);
    nums[1] := x;
    item.value := nums[1];
    item.tag := 'a';
    c := item.tag;
    if item.value < 10 then
        adjust(item.value,y)
    else
        y := item.value
    fi;
    while x < y do
        x := x + 1
    endwh;
    write(c)
end.
