tests/semantic_errors/call_errors.snl
program callErrors
var integer x;
procedure p(var integer y);
begin
    y := y + 1;
    return(y)
end
begin
    x();
    p(1);
    p(x,x)
end.
